--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,4 +10,4 @@ repos:
     hooks:
       - id: prettier
         args: [--write]
-        files: "\\.(html|css|js)$"
+        files: \.(html|css|js)$
