fix: error en .env POSTS_SERVICE_URL es POST_SERVICE_URL
agregar log para llamado de post en monolith

agregar comentarios en yaml de los procesos

--- a/k8s/01-configmap.yaml
+++ b/k8s/01-configmap.yaml
@@ -1,10 +1,11 @@
+# k8s/01-configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: blog-config
   namespace: blog
 data:
-  LOG_LEVEL: "info"
-  USERS_SERVICE_URL: "http://user.blog.svc.cluster.local:8080"
-  POSTS_SERVICE_URL: "http://post.blog.svc.cluster.local:8080"
-  COMMENTS_SERVICE_URL: "http://comment.blog.svc.cluster.local:8080"
+  LOG_LEVEL: 'info'
+  USERS_SERVICE_URL: 'http://user.blog.svc.cluster.local:8080'
+  POST_SERVICE_URL: 'http://post.blog.svc.cluster.local:8080'
+  COMMENTS_SERVICE_URL: 'http://comments.blog.svc.cluster.local:8080' # corregido
