--- a/k8s/99-ingress.yaml
+++ b/k8s/99-ingress.yaml
@@ -1,18 +1,29 @@
+# k8s/99-ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
+
 metadata:
   name: blog-ingress
   namespace: blog
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
-    - host: blog.local
+    - host: blog.local # Agregar en /etc/hosts -> 127.0.0.1 blog.local
       http:
         paths:
-          # /api/users/...  ->  /u/...
+          # punto de entrada principal -> monolith
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: monolith
+                port:
+                  number: 5000
+
+          # /api/users/... -> backend user-service
           - path: /api/users(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
@@ -21,7 +32,7 @@ spec:
                 port:
                   number: 8080
 
-          # /api/posts/...  ->  /post/...
+          # /api/posts/... -> backend post-service
           - path: /api/posts(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
@@ -30,7 +41,7 @@ spec:
                 port:
                   number: 8080
 
-          # /api/comments/...  ->  /v1/...
+          # /api/comments/... -> backend comments-service
           - path: /api/comments(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
