--- a/k8s/01-configmap.yaml
+++ b/k8s/01-configmap.yaml
@@ -8,7 +8,7 @@ data:
   LOG_LEVEL: 'info'
   USER_SERVICE_URL: 'http://user.blog.svc.cluster.local:8080'
   POST_SERVICE_URL: 'http://post.blog.svc.cluster.local:8080'
-  COMMENTS_BASE: 'http://comments.blog.svc.cluster.local:8080' # corregido
+  COMMENTS_BASE: 'http://comments.blog.svc.cluster.local:8080/v1'
 
   # Configuración pública de Firebase para frontend
   FIREBASE_API_KEY: 'AIzaSyDFiuc4X6_uIQq2DzbaKxrxQ-7sIzSX7s4'
